# wavespec

./: .gitignore  MANIFEST.in  README.md  setup.py
.github/workflows/: ci.yml  release.yml
tools/: build_bundled_libs.py
wavespec/: Globals.py  Tests.py  _CheckFirstImport.py  __init__.py
wavespec/CrossPhase/: CrossPhase.py  SpectrogramFFT.py  SpectrogramLS.py  __init__.py
wavespec/CrossSpec/: CrossSpec.py  SpectrogramFFT.py  SpectrogramLS.py  __init__.py
wavespec/DetectWaves/: CPWaves.py  DetectWavePeaks.py  __init__.py
wavespec/Filter/: Filter.py  IFilter.py  Lanczos.py  _CFunctions.py  __init__.py
wavespec/Fourier/: FFT.py  PlotSpectrogram.py  Spectrogram.py  Spectrogram3D.py  WindowFunctions.py  _GetFFTWindows.py  __init__.py
wavespec/LombScargle/: InverseLombScargle.py  LombScargle.py  PlotSpectrogram.py  Spectrogram.py  Spectrogram3D.py  _CFunctions.py  _GetLSWindows.py  __init__.py
wavespec/PCA/: PCA.py  __init__.py
wavespec/Spectogram/: DetectGaps.py  GetWindows.py  Spectogram.py  Spectrogram.py  __init__.py
wavespec/Spectrogram/: DetectGaps.py  GetWindows.py  PlotSpectrogram.py  PlotSpectrogramOld.py  Spectrogram.py  Spectrogram3D.py  SpectrogramPlotter.py  __init__.py
wavespec/Test/: FFT.py  LS.py  LSOversample.py  TestCP.py  TestCPEigenfreqs.py  TestCPSpectrogram.py  TestLS.py  TestPolarization.py  TestSpectrogram.py  __init__.py
wavespec/Tools/: ArrowLine.py  GetWindows.py  PlotPolarization.py  PolArrow.py  (+8 more)
wavespec/__data/libfilter/: CMakeLists.txt  libfilter.cc  libfilter.h  makefile
wavespec/__data/liblombscargle/: CMakeLists.txt  ComplexLS.c  ComplexLS.h  liblombscargle.cc  liblombscargle.h  makefile
wavespec/__data/liblombscargle/doc/: agufull.bst  lsdoc.aux  lsdoc.bbl  lsdoc.blg  lsdoc.tex  references.bib
(+2 files in other folders)
